--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
     <script type=  "text/javascript" src="./boundingbox.js"></script>
     <script type=  "text/javascript" src="./monster.js"></script>
     <script type = "text/javascript" src="./main.js"></script>
-    <h1> A-Left </h1>
-    <h1>  D-Right </h1>
-    <h1>  Space-Jump (buggy currently) </h1>
-    <h1>  click-attack (Also buggy currently) </h1>
+    <h1> A-Left D-Right Space-Jump click-attack</h1>
 </body>
 </html>
