--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <title>Game Project Title Goes Here</title>
+
 </head>
 <body>
     <canvas id="gameWorld" width="1800" height="800" style="background-color: white"  tabindex="0" autofocus></canvas>
@@ -11,13 +11,19 @@
     <script type = "text/javascript" src="./timer.js"></script>
     <script type = "text/javascript" src="./gameengine.js"></script>
     <script type = "text/javascript" src="./animator.js"></script>
+    <script type = "text/javascript" src="./ground.js"></script>
     <script type = "text/javascript" src="./projectile.js"></script>
     <script type = "text/javascript" src="./mage.js"></script>
     <script type = "text/javascript" src="./enemies.js"></script>
+    <script type = "text/javascript" src="./fireBoss.js"></script>
     <script type = "text/javascript" src="./sceneManager.js"></script>
     <script type = "text/javascript" src="./util.js"></script>
     <script type=  "text/javascript" src="./boundingbox.js"></script>
     <script type=  "text/javascript" src="./monster.js"></script>
     <script type = "text/javascript" src="./main.js"></script>
+    <h1> A-Left </h1>
+    <h1>  D-Right </h1>
+    <h1>  Space-Jump (buggy currently) </h1>
+    <h1>  click-attack (Also buggy currently) </h1>
 </body>
 </html>
