--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script type = "text/javascript" src="./ground.js"></script>
     <script type = "text/javascript" src="./projectile.js"></script>
     <script type = "text/javascript" src="./mage.js"></script>
+    <script type = "text/javascript" src="./healthbar.js"></script>
     <script type = "text/javascript" src="./enemies.js"></script>
     <script type = "text/javascript" src="./fireBoss.js"></script>
     <script type = "text/javascript" src="./sceneManager.js"></script>
