Ground, platforms, portal

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     <script type=  "text/javascript" src="./boundingbox.js"></script>
     <script type=  "text/javascript" src="./monster.js"></script>
     <script type = "text/javascript" src="./main.js"></script>
+    <script type = "text/javascript" src="./portal.js"></script>
+    <!-- <script type = "text/javascript" src="./animatorPortal.js"></script> -->
 </head>
 <body>
     <canvas id="gameWorld" width="1800" height="800" style="background-color: white"  tabindex="0" autofocus></canvas>
