--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
     <script type = "text/javascript" src="./gameengine.js"></script>
     <script type = "text/javascript" src="./animator.js"></script>
     <script type = "text/javascript" src="./levels.js"></script>
-    <script type="text/javascript" src="./cursor.js"></script>
+    <script type = "text/javascript" src="./cursor.js"></script>
     <script type = "text/javascript" src="./ground.js"></script>
-    <script type="text/javascript" src="./gate.js"></script>
+    <script type = "text/javascript" src="./gate.js"></script>
+    <script type = "text/javascript" src="./sign.js"></script>
     <script type = "text/javascript" src="./projectile.js"></script>
     <script type = "text/javascript" src="./mage.js"></script>
     <script type = "text/javascript" src="./healthbar.js"></script>
