updated portal and sign

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script type = "text/javascript" src="./cursor.js"></script>
     <script type = "text/javascript" src="./ground.js"></script>
     <script type = "text/javascript" src="./gate.js"></script>
+    <script type = "text/javascript" src="./textbox.js"></script>
     <script type = "text/javascript" src="./sign.js"></script>
     <script type = "text/javascript" src="./projectile.js"></script>
     <script type = "text/javascript" src="./mage.js"></script>
