--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="utf-8">
     <title>Game Project Title Goes Here</title>
-    <!-- <style>
-        /* body {
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Press+Start+2P">
+     <style>
+        body {
             font-family: 'Press Start 2P', serif;
-            font-size: 24px;
-        } */
+            /* font-size: 24px; */
+        }
         /* canvas {
             padding-left: 0;
             padding-right: 0;
@@ -19,7 +21,7 @@
         /* div {
             text-align: center;
         } */
-    </style> -->
+    </style>
     <script type = "text/javascript" src="./assetmanager.js"></script>
     <script type = "text/javascript" src="./timer.js"></script>
     <script type = "text/javascript" src="./gameengine.js"></script>
@@ -28,6 +30,7 @@
     <script type = "text/javascript" src="./cursor.js"></script>
     <script type = "text/javascript" src="./ground.js"></script>
     <script type = "text/javascript" src="./gate.js"></script>
+    <script type = "text/javascript" src="./potion.js"></script>
     <script type = "text/javascript" src="./textbox.js"></script>
     <script type = "text/javascript" src="./sign.js"></script>
     <script type = "text/javascript" src="./projectile.js"></script>
@@ -46,7 +49,7 @@
 <body>
     
     <canvas id="gameWorld" width="1800" height="800" style="background-color: white"  tabindex="0" autofocus></canvas>
-    <h1> A-Left D-Right Space-Jump click-attack</h1>
+    <!-- <h1> A-Left D-Right Space-Jump click-attack</h1> -->
     <div>
         <br />
        <input type="checkbox" id="debug" onchange=debugOn()> Debug <input type="checkbox" id="mute" > Mute <input type="range" id="volume" min="0" max="1" value="0.1" step="0.05" > Volume
