--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     <script type = "text/javascript" src="./enemies.js"></script>
     <script type = "text/javascript" src="./portal.js"></script>
     <script type = "text/javascript" src="./fireBoss.js"></script>
+
+    <script type = "text/javascript" src="./bomb.js"></script>
+    
     <script type = "text/javascript" src="./sceneManager.js"></script>
     <script type = "text/javascript" src="./util.js"></script>
     <script type=  "text/javascript" src="./boundingbox.js"></script>
