--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <script type = "text/javascript" src="./portal.js"></script>
     <script type = "text/javascript" src="./fireBoss.js"></script>
     <script type = "text/javascript" src="./item.js"></script>
+    <script type = "text/javascript" src="./trigger.js"></script>
     <script type = "text/javascript" src="./sceneManager.js"></script>
     <script type = "text/javascript" src="./util.js"></script>
     <script type=  "text/javascript" src="./boundingbox.js"></script>
