--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script type = "text/javascript" src="./portal.js"></script>
     <script type = "text/javascript" src="./fireBoss.js"></script>
     <script type = "text/javascript" src="./seaMonster.js"></script>
+    <script type = "text/javascript" src="./waterBoss.js"></script>
     <script type = "text/javascript" src="./bomb.js"></script>
     
     <script type = "text/javascript" src="./sceneManager.js"></script>
