--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <script type = "text/javascript" src="./projectile.js"></script>
     <script type = "text/javascript" src="./mage.js"></script>
     <script type = "text/javascript" src="./healthbar.js"></script>
+    <script type = "text/javascript" src="./seamonster.js"></script>
     <script type = "text/javascript" src="./earthenemy.js"></script>
     <script type = "text/javascript" src="./enemies.js"></script>
     <script type = "text/javascript" src="./portal.js"></script>
