added damage text and music

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script type = "text/javascript" src="./cursor.js"></script>
     <script type = "text/javascript" src="./ground.js"></script>
     <script type = "text/javascript" src="./gate.js"></script>
+    <script type = "text/javascript" src="./damagetext.js"></script>
     <script type = "text/javascript" src="./potion.js"></script>
     <script type = "text/javascript" src="./textbox.js"></script>
     <script type = "text/javascript" src="./sign.js"></script>
