--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <script type = "text/javascript" src="./trigger.js"></script>
     <script type = "text/javascript" src="./waterBoss.js"></script>
     <script type = "text/javascript" src="./bomb.js"></script>
+    <script type = "text/javascript" src="./cannon.js"></script>
     
     <script type = "text/javascript" src="./sceneManager.js"></script>
     <script type = "text/javascript" src="./util.js"></script>
